Return complete Kafka metrics polls